# dickey-fuller-test-for-stationarity-in-time-series-with-python

./: 2024-12-18_Dickey-Fuller-Test-for-Stationarity-in-Time-Series-with-Python-4e4bf1953eed.py  README.md  article.md  benchmark_rust.py  config.yaml  dickey_fuller_stationarity.py  eia_adf_fixed.py  main.py  pyproject.toml  requirements.txt
_drafts/: eia_adf_fixed.py
polars_duckdb/: core.py
rust/bench/: Cargo.toml
rust/bench/src/: main.rs
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/py/: Cargo.toml
rust/py/src/: lib.rs
src/: compute_kernel.py  core.py
