[package]
name = "dickey_fuller_test_for_stationarity_in_time_series_with_python_rs"
description = "Python bindings (PyO3) for dickey_fuller_test_for_stationarity_in_time_series_with_python_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "dickey_fuller_test_for_stationarity_in_time_series_with_python_rs"
crate-type = ["cdylib"]

[dependencies]
dickey_fuller_test_for_stationarity_in_time_series_with_python_core = { path = "../core" }
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = "0.28"
